bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:6: error: reassignment to val
  return a=b
          ^